# RS3-TK

./: .editorconfig  .gitignore  README.md  pom.xml
src/main/java/: module-info.java
src/main/java/uk/calebwhiting/rs3tk/: App.java  TestXcb.java
src/main/java/uk/calebwhiting/rs3tk/impl/: DisplayToolkit.java  Window.java
src/main/java/uk/calebwhiting/rs3tk/impl/x11/: CTypes.java  XProtocol.java  Xcb.java  XcbTypes.java  XcbTypes.xml  gentypes.py
src/main/resources/uk/calebwhiting/rs3tk/images/: 3.xcf
tk-annotation-processor/: pom.xml
tk-annotation-processor/src/main/java/: module-info.java
tk-annotations/: pom.xml
tk-annotations/src/main/java/: module-info.java
tk-api/: pom.xml
tk-api/src/main/java/: module-info.java
tk-core/: pom.xml
tk-core/src/main/java/: module-info.java
tk-core/src/main/java/uk/calebwhiting/tk/: App.java  CaptureManager.java  ClientContextImpl.java  TkModule.java
xcb-bindings/: CMakeLists.txt  pom.xml
xcb-bindings/scripts/: compile.sh
xcb-bindings/src/main/cxx/: LibXcbBindings.hpp  NativeUtils.cpp  XAtomEnum.cpp  XImageFormatEnum.cpp  XInternal.cpp  XStructs.cpp  XcbUtils.cpp
xcb-bindings/src/main/java/: module-info.java
xcb-bindings/src/main/java/org/freedesktop/xcb/: NativeUtils.java  Pointer.java  XID.java  Xcb.java  XcbAtom.java  XcbConnection.java  XcbError.java  XcbGeometry.java  XcbImage.java  XcbImageFormat.java  XcbQueryTreeReply.java  XcbScreen.java  XcbSetup.java  XcbWindowAttributes.java
xcb-bindings/src/main/java/org/freedesktop/xcb/internal/: X.java
xcb-bindings/src/test/java/: TestXcb.java
(+24 files in other folders)
